Segfault was because I was not giving server.cpp enough time to clean up threads in between requests. Temporarily fixed this issue by adding delays between requests. Need to implement thread pools. Shared locks slow down performance because DB operations to fast.
ameyamandhare@dhcp-10-5-146-80 zoom % cd build
ameyamandhare@dhcp-10-5-146-80 build % ./test

10 threads...

10M r/s for 1s :
    Latency (ms): min=0.000 | max=6.420 | mean=0.009 | p50=0.001 | p95=0.043 | p99=0.082
    Throughput:   requests=10000000 | duration=12.00s | rate=0.83M req/s
    Concurrency:  peak=10 | min=0 | mean=8.4 | p50=9 | p95=10 | p99=10 | contention=99.2%

20M r/s for 1s :
    Latency (ms): min=0.000 | max=6.150 | mean=0.008 | p50=0.001 | p95=0.041 | p99=0.079
    Throughput:   requests=20000000 | duration=22.43s | rate=0.89M req/s
    Concurrency:  peak=10 | min=0 | mean=8.5 | p50=9 | p95=10 | p99=10 | contention=99.4%

30M r/s for 1s :
    Latency (ms): min=0.000 | max=5.495 | mean=0.008 | p50=0.001 | p95=0.041 | p99=0.080
    Throughput:   requests=30000000 | duration=32.89s | rate=0.91M req/s
    Concurrency:  peak=10 | min=0 | mean=8.6 | p50=9 | p95=10 | p99=10 | contention=99.5%

20 threads...

10M r/s for 1s :
    Latency (ms): min=0.000 | max=121.628 | mean=0.018 | p50=0.001 | p95=0.051 | p99=0.131
    Throughput:   requests=10000000 | duration=12.54s | rate=0.80M req/s
    Concurrency:  peak=20 | min=0 | mean=16.4 | p50=17 | p95=20 | p99=20 | contention=99.8%

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ project(zoom)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(server src/server.cpp src/metrics.cpp)
-add_executable(client src/test.cpp)
+add_executable(test src/test.cpp)
