--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,6 @@ project(zoom)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(server src/server.cpp src/metrics.cpp)
+add_executable(server src/server.cpp src/metrics.cpp
+        src/lockfree.cpp)
 add_executable(test src/test.cpp)
