1. split lockfree.cpp into 4 cpp files and made output look prettier

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,15 @@ project(zoom)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(server src/server.cpp src/metrics.cpp
-        src/lockfree.cpp)
+add_executable(server
+        src/server.cpp
+        src/bench_metrics.cpp
+        src/lockfree/globals.cpp
+        src/lockfree/hp.cpp
+        src/lockfree/metrics.cpp
+        src/lockfree/ops.cpp
+)
+
+target_include_directories(server PRIVATE src/lockfree/include)
+
 add_executable(test src/test.cpp)
